// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionStatusLabel Component should render CONFIRMED properly 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--confirmed"
  >
    June 1
  </div>
</div>
`;

exports[`TransactionStatusLabel Component should render PENDING properly 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--pending transaction-status-label--pending"
  >
    Pending
  </div>
</div>
`;

exports[`TransactionStatusLabel Component should render PENDING properly when status is APPROVED 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--pending transaction-status-label--pending"
  >
    <div
      aria-describedby="tippy-tooltip-1"
      class=""
      data-original-title="test-title"
      data-tooltipped=""
      style="display: inline;"
      tabindex="0"
    >
      Pending
    </div>
  </div>
</div>
`;

exports[`TransactionStatusLabel Component should render QUEUED properly 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--queued transaction-status-label--queued"
  >
    Queued
  </div>
</div>
`;

exports[`TransactionStatusLabel Component should render UNAPPROVED properly 1`] = `
<div>
  <div
    class="transaction-status-label transaction-status-label--unapproved transaction-status-label--unapproved"
  >
    Unapproved
  </div>
</div>
`;
